--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -128,6 +128,35 @@
   }
 }
 
+.custom-scrollbar::-webkit-scrollbar {
+  width: 3px; /* largura fina */
+  height: 3px; /* para horizontal */
+  scrollbar-gutter: stable !important;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #ff0000; /* fundo */
+  scrollbar-gutter: stable !important;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #a8a29e; /* rosa Tailwind (pink-500) */
+  border-radius: 9999px; /* arredondada */
+  scrollbar-gutter: stable !important;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #a8a29e; /* pink-600 no hover */
+  scrollbar-gutter: stable !important;
+}
+
+/* Para Firefox */
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: #a8a29e #1c1917;
+  scrollbar-gutter: stable !important;
+}
+
 .swiper-slide {
   max-width: fit-content;
 }
